improve readability, fix links and add privacy statemt v0.1

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -33,6 +33,7 @@ body {
   left: 0;
   min-width: 100%;
   height: 32rem;
+  border-radius: 10px;
 }
 
 
@@ -77,7 +78,7 @@ body {
     margin-bottom: 1.25rem;
     font-size: 1.25rem;
     line-height: 1.4;    
-    /* background-color: #9e9e9e82; */ 
+    background-color: #8284869e;
   }
 
   .featurette-heading {
